<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.greenquiz.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_answer_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_rb1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q1_answer_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_rb2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q1_answer_3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_rb3"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_2"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/q2_answer_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/q2_input"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_3"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3_answer_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_rb1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q3_answer_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_rb2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q3_answer_3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_rb3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q3_answer_4_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_rb4"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q3_answer_5_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_rb5"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_4"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/q4_answer_1_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q4_cb1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q4_answer_2_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q4_cb2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q4_answer_3_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q4_cb3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q4_answer_4_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q4_cb4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_5"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5_answer_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q5_answer_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_6"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q6_answer_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_rb1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q6_answer_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_rb2"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_7"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/q7_answer_1_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q7_cb1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q7_answer_2_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q7_cb2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q7_answer_3_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q7_cb3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q7_answer_4_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q7_cb4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q7_answer_5_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/q7_cb5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_8"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q8_answer_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q8_answer_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="submitQuiz"
            android:text="@string/submit_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetQuiz"
            android:text="@string/reset_button" />

    </LinearLayout>

</ScrollView>
